--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ NEXT_PUBLIC_PRICE_PER_REVIEW=
 
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
+
+APPWRITE_ENDPOINT=
+APPWRITE_PROJECT_ID=
+APPWRITE_SECRET_KEY=
