--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "sharp": "^0.33.5",
     "stripe": "^16.11.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
