--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "14.2.9",
     "node-appwrite": "^14.1.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
