--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.439.0",
     "micro-cors": "^0.1.1",
-    "next": "14.2.9",
+    "next": "^15.0.3",
     "next-intl": "^3.25.0",
     "node-appwrite": "^14.1.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
